# torch-rbln

./: .clang-format  .gitignore  .lintrunner.toml  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  PRODUCTION_FINAL_REPORT.md  README.md  _b_toggle.py  _kernel_toggle.py  bench_address_churn.py  bench_b_vs_baseline.py  bench_breakdown.py  bench_cs_patch_cost.py  bench_cs_patching_cost.py  bench_generalized.py  bench_update_vs_prepare.py  compare_test_b.py  compare_test_c_kernel.py  constraints-build-dev.txt  hatch_build.py  mypy-strict.ini  mypy.ini  pyproject.toml  test_cs_patching.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yaml  check_pr_title.yaml  ci.yaml  dispatch_event.yaml  release.yaml
aten/src/ATen/: CMakeLists.txt
aten/src/ATen/native/: RBLNRegisterOps.cpp  native_functions.yaml  tags.yaml
aten/src/ATen/native/rbln/: RBLNCPUFallback.cpp  RBLNCPUFallback.h  RBLNCopy.cpp  RBLNCopy.h  RBLNResize.cpp  RBLNResize.h  RBLNTensorFactories.cpp  RBLNTensorFactories.h  RBLNTensorUtils.cpp  RBLNTensorUtils.h  rbln_vmem_borrow_api.h
c10/: CMakeLists.txt
c10/rbln/: CMakeLists.txt  DeviceMappingManager.cpp  DeviceMappingManager.h  RBLNAllocator.cpp  RBLNFallbackConfig.cpp  RBLNFallbackConfig.h  RBLNFunctions.cpp  RBLNFunctions.h  RBLNGenerator.cpp  RBLNGenerator.h  RBLNHooksInterface.cpp  RBLNHooksInterface.h  RBLNLogging.cpp  RBLNLogging.h  RBLNMacros.h
c10/rbln/impl/: AddKernelB.cpp  DivKernelB.cpp  MulKernelB.cpp  NegKernelB.cpp  RBLNGuardImpl.cpp  RBLNGuardImpl.h  RBLNKernelCache.cpp  RBLNKernelCache.h  RBLNKernelTemplate.h  SubKernelB.cpp
cmake/: FindGTest.cmake  FindPybind.cmake  FindRebel.cmake  FindTorch.cmake  Findspdlog.cmake
docs/: CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  LINTING.md  RELEASE_PROCESS.md  TEST_GUIDE.md  THIRD_PARTY_UPDATE.md  WORKFLOWS.md
test/: conftest.py  filters.py  run_tests.py  utils.py
test/cpp/: CMakeLists.txt
test/cpp/c10d/: ProcessGroupRBLNTest.cpp
test/cpp/core/: RBLNAllocatorTest.cpp  RBLNCopyOpTest.cpp  RBLNDeviceGuardTest.cpp  RBLNFunctionsTest.cpp  RBLNLoggingTest.cpp  RBLNTensorUtilsTest.cpp
test/distributed/: benchmark_collective_ops.py  test_process_group.py  test_tp_pp.py  test_tp_pp_autoport.py
test/internal/: test_memory_stats.py  test_warm_cache_internals.py
test/models/: _vllm_rbln_worker_patch.py  requirements.txt  test_optimum_llm.py  test_transformers.py  test_vllm_llm.py
test/ops/: test_ops.py
test/rbln/: test_borrow_fast_path.py  test_compile_cache.py  test_custom_kernel.py  test_device_mapping.py  test_dispatch_shim_precheck.py  test_eager_fast_path.py  test_efficientzerotensor.py  test_find_and_load_tvm_library.py  test_graph_eager_mode.py  test_internal_op_utils.py  test_llama_ops.py  test_monkey_patch_hash.py  test_monkey_patch_runtime.py  test_multi_device.py  test_non_zero_storage_offset.py  test_op_caching.py  test_profiling.py  test_rbln_apis.py  test_registered_ops.py  test_sdpa_decode_overflow.py  test_tensor_copy.py  test_tensor_memory.py  test_torch_compile_eager_graph_repeat.py  test_torch_compile_patch.py  test_zero_opt.py
test/rbln/_closed_tests/: test_host_precision_cast.py
test/rbln/walkthrough/: test_00_environment.py  test_01_device_type.py  test_02_device_tensor.py  test_03_tensor_metadata.py  test_04_accelerator_interface.py  test_05_eager_mode.py  test_06_nn_module.py  test_07_graph_mode.py  test_08_c10d_rbln_ccl.py
tools/: apply-custom-rebel.sh  benchmark_rbln_overhead.py  build-with-external-rebel.sh  dev-setup.sh  get_version.py  replace_depends.py  run_codegen.py  sync-linter.sh
tools/codegen/: __init__.py  analyzer.py  codegen.py  config.py  main.py  parser.py
tools/codegen/generators/: general.py  general_template.py  variants.py  variants_template.py
tools/linter/adapters/: clangtidy_linter.py
tools/test/: install-test-deps.sh
torch_rbln/: __init__.py  diagnose.py  memory.py
torch_rbln/_internal/: _b_bootstrap.py  _kernel_bootstrap.py  compile_cache.py  env_diagnostic.py  env_utils.py  log_utils.py  monkey_patches.py  ops_utils.py  profiling.py  rdma_env.py  register_backward_ops.py  register_custom_ops.py  rsd_utils.py  torch_compile_patch_helpers.py  tvm_libinfo.py  warm_cache.py
torch_rbln/_internal/kernels/: custom_transpose.py  sdpa.py
torch_rbln/csrc/distributed/c10d/rbln/: CMakeLists.txt  ProcessGroupRBLN.cpp  ProcessGroupRBLN.hpp  ProcessGroupRBLNModule.cpp  ProcessGroupRBLNModule.hpp  RcclUniqueIdForC10d.hpp
torch_rbln/csrc/rbln/: CMakeLists.txt  DispatchShim.cpp  DispatchShim.h  Module.cpp  WarmCache.cpp  WarmCache.h
torch_rbln/csrc/rbln/b_kernels/: AddKernelB.cpp  DivKernelB.cpp  MulKernelB.cpp  NegKernelB.cpp  RBLNKernelCache.cpp  RBLNKernelCache.h  RBLNKernelTemplate.h  SubKernelB.cpp
torch_rbln/csrc/rbln/kernels/: AddKernel.cpp  DivKernel.cpp  MulKernel.cpp  NegKernel.cpp  RBLNKernelCache.cpp  RBLNKernelCache.h  RBLNKernelTemplate.h  SubKernel.cpp
torch_rbln/device/: __init__.py  context_holder.py  device.py  device_tensor_utils.py
