# ==============================================================================
# torch-rbln pyproject.toml
# ==============================================================================

[project]
name = "torch-rbln"
dynamic = ["version"]
description = "Rebellions Extension for PyTorch"
authors = [
  {name = "Rebellions Inc.", email = "client_support@rebellions.ai"}
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10,<3.14"
dependencies = [
  "PyYAML>=6,<7",
  "scipy>=1.14.0",
  "libcst>=1.2.0",
  "torch==2.10.0+cpu"
]

[project.entry-points]
"torch.backends" = {autoload = "torch_rbln:torch_backends_entry_point"}

# ==============================================================================
# Build System - hatchling with setuptools-scm for git-based versioning
# ==============================================================================

[build-system]
requires = [
  "hatchling>=1.25.0",
  "setuptools-scm>=8.0",
  "PyYAML>=6,<7",
  "cmake>=3.18,<4.0",
  "mypy>=1.13.0,<1.14.0",
  "ninja>=1.11.1.3,<1.11.2",
  "rebel-compiler>=0.10.2,<0.20.0",
  "torch==2.10.0+cpu"
]
build-backend = "hatchling.build"

# ==============================================================================
# Hatch Configuration
# ==============================================================================

[tool.hatch.version]
# Version is computed by tools/get_version.py, which calls setuptools-scm
# with custom version_scheme and local_scheme callables:
# - On a tag (distance=0): preserve the tag version as-is, including pre-release
#   e.g. v0.10.0a0 → 0.10.0a0,  v0.10.0 → 0.10.0
# - Off a tag (distance>0): strip pre-release, bump patch, append .devN+gCOMMIT
#   e.g. v0.10.0a0, dist=5 → 0.10.1.dev5+g1234abc
#        v0.10.0,   dist=5 → 0.10.1.dev5+g1234abc
source = "code"
path = "tools/get_version.py"
expression = "compute_version()"

[tool.hatch.metadata]
# Allow file:// direct references for build-time dependency pinning
# (e.g., replace_depends.py pins custom torch or rebel-compiler in pyproject.toml).
allow-direct-references = true

[tool.hatch.build.hooks.custom]
# Custom build hook for CMake-based C++ extension build
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
  "CMakeLists.txt",
  "aten/**/*.cmake",
  "aten/**/*.cpp",
  "aten/**/*.h",
  "aten/**/*.hpp",
  "aten/**/CMakeLists.txt",
  "aten/**/*.yaml",
  "c10/**/*.cmake",
  "c10/**/*.cpp",
  "c10/**/*.h",
  "c10/**/*.hpp",
  "c10/**/CMakeLists.txt",
  "cmake/**/*.cmake",
  "tools/**/*.py",
  "tools/**/*.sh",
  "torch_rbln/**/*.py",
  "torch_rbln/**/*.pyi",
  "test/cpp/**/*.cpp",
  "test/cpp/**/CMakeLists.txt",
  "torch_rbln/csrc/**/*.cmake",
  "torch_rbln/csrc/**/*.cpp",
  "torch_rbln/csrc/**/*.h",
  "torch_rbln/csrc/**/*.hpp",
  "torch_rbln/csrc/**/CMakeLists.txt",
  "third_party/rebel_compiler/include/**/*.h",
  "hatch_build.py",
  "pyproject.toml",
  "README.md",
  "LICENSE",
  "NOTICE"
]
exclude = [
  "**/*.pyc",
  "**/.env",
  "**/.env/",
  "**/.venv/",
  "**/__pycache__/",
  "**/env/",
  "**/venv/"
]

[tool.hatch.build.targets.wheel]
packages = ["torch_rbln"]
# Exclude C++ sources, headers, and build files; runtime only needs compiled .so and Python.
exclude = [
  "torch_rbln/csrc/**",
  "torch_rbln/include/**"
]
# Mark this as a platform-specific wheel with C extensions
only-include-required = false
skip-excluded-dirs = true

# ==============================================================================
# uv Configuration
# ==============================================================================

[tool.uv]
# Index strategy: first-index = strict/secure (use first index that has package),
# unsafe-best-match = find best version across all indexes (potential security risk)
index-strategy = "first-index"

# Allow pre-release versions only when explicitly specified in dependency specifiers.
# Normal resolution uses stable versions only; CI pins via replace_depends.py (pyproject.toml) + uv lock when needed.
prerelease = "if-necessary-or-explicit"

# Package indexes
index = [
  { name = "pypi", url = "https://pypi.org/simple/", default = true },
  { name = "pytorch-cpu", url = "https://download.pytorch.org/whl/cpu", explicit = true },
  { name = "rbln", url = "https://pypi.rbln.ai/simple/", explicit = true },
]

# Pin packages to specific indexes
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
rebel-compiler = { index = "rbln" }

# ==============================================================================
# Dependency Groups
# ==============================================================================

[dependency-groups]
build = [
  "cmake>=3.18",
  "editables>=0.5",
  "rebel-compiler>=0.10.2,<0.20.0",
  "setuptools-scm>=8.0",
  "hatchling>=1.25",
  "mypy>=1.13.0,<1.14.0",
  "ninja>=1.11",
  "pip>=24.3.1,<24.4"
]
lint = [
  "black>=24.2.0,<25.0.0",
  "click>=8.1.8,<8.2.0",
  "cmakelint>=1.4.1,<1.5",
  "expecttest>=0.3.0,<0.4.0",
  "filelock>=3.16.1,<3.17.0",
  "flake8>=6.1.0,<6.2.0",
  "flake8-bugbear>=23.3.23,<23.4.0",
  "flake8-comprehensions>=3.15.0,<3.16.0",
  "flake8-executable>=2.1.3,<2.2.0",
  "flake8-logging-format>=0.9.0,<0.10.0",
  "flake8-pyi>=23.3.1,<23.4.0",
  "flake8-simplify>=0.19.3,<0.20.0",
  "isort>=5.13.2,<5.14.0",
  "lintrunner>=0.12.7,<0.13.0",
  "mccabe>=0.7.0,<0.8.0",
  "mypy>=1.13.0,<1.14.0",
  "mypy-extensions>=1.0.0,<1.1.0",
  "optree>=0.13.0,<0.14.0",
  "pandas>=2.2.3,<2.3.0",
  "pkginfo>=1.12.0,<1.13.0",
  "pycodestyle>=2.11.1,<2.12.0",
  "pyflakes>=3.1.0,<3.2.0",
  "pytest>=8.3.4,<8.4.0",
  "pytest-forked>=1.6.0",
  "pytest-xdist>=3.6.1",
  "ruamel-yaml>=0.17.4,<0.18.0",
  "ruff>=0.9.1,<0.10",
  "setuptools>=70.0.0,<78.0.0",
  "shellcheck-py>=0.7.2.1,<0.7.3.0",
  "sympy>=1.13.1,<1.14.0",
  "tabulate>=0.9.0,<0.10.0",
  "toml>=0.10.2,<0.11.0",
  "twine>=6.1.0,<6.2.0",
  "types-colorama>=0.4.6,<0.5.0",
  "types-jinja2>=2.11.9,<2.12.0",
  "types-markupsafe>=1.1.10,<1.2.0",
  "types-protobuf>=3.19.18,<3.20.0",
  "types-pyyaml>=6.0.7,<6.1.0",
  "types-requests>=2.27.25,<2.28.0",
  "types-setuptools>=75.8.0.20250110,<75.8.1.0",
  "types-tabulate>=0.8.8,<0.9.0",
  "types-urllib3>=1.26.25.14,<1.26.26.0",
  "usort>=1.0.8.post1,<1.1.0"
]
dev = [
  { include-group = "build" },
  { include-group = "lint" }
]

# ==============================================================================
# Tool Configurations
# ==============================================================================

[tool.black]
line-length = 120
target-version = ["py39"]


[tool.isort]
src_paths = ["rbln.py", "codegen", "torch_rbln", "test"]
extra_standard_library = ["typing_extensions"]
skip_gitignore = true
skip_glob = ["third_party/*"]
atomic = true
profile = "black"
indent = 4
line_length = 120
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true


[tool.usort.known]
first_party= ["rbln.py", "codegen", "torch_rbln", "test"]
standard_library = ["typing_extensions"]


[tool.ruff]
target-version = "py39"
line-length = 120
src = ["rbln.py","codegen", "torch_rbln", "test"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
ignore = [
    "B007", "B008", "B017",
    "B018",
    "B023",
    "B028",
    "E402",
    "C408",
    "E501",
    "E721",
    "E731",
    "E741",
    "EXE001",
    "F405",
    "G101",
    "NPY002",
    "PERF203",
    "PERF401",
    "PERF403",
    "PYI024",
    "PYI036",
    "PYI041",
    "PYI056",
    "SIM102", "SIM103", "SIM112",
    "SIM113",
    "SIM105",
    "SIM108",
    "SIM110",
    "SIM114",
    "SIM115",
    "SIM116",
    "SIM117",
    "SIM118",
    "UP006",
    "UP007"
]
select = [
    "B",
    "B904",
    "C4",
    "G",
    "E",
    "EXE",
    "F",
    "SIM1",
    "SIM911",
    "W",
    "FURB",
    "LOG",
    "NPY",
    "PERF",
    "PGH004",
    "PIE790",
    "PIE794",
    "PIE800",
    "PIE804",
    "PIE807",
    "PIE810",
    "PLC0131",
    "PLC0132",
    "PLC0205",
    "PLC3002",
    "PLE",
    "PLR0133",
    "PLR0206",
    "PLR1722",
    "PLR1736",
    "PLW0129",
    "PLW0133",
    "PLW0406",
    "PLW0711",
    "PLW1509",
    "PLW2101",
    "PLW3301",
    "PT006",
    "PT022",
    "PT023",
    "PT024",
    "PT025",
    "PT026",
    "PYI",
    "Q003",
    "Q004",
    "RSE",
    "RUF008",
    "RUF013",
    "RUF015",
    "RUF016",
    "RUF017",
    "RUF018",
    "RUF019",
    "RUF024",
    "RUF026",
    "TCH",
    "TRY002",
    "TRY203",
    "TRY401",
    "UP"
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401"
]


[tool.pytest.ini_options]
# `--verbose`: show each test name and result for better visibility
# `-rEfX`: show extra summary for (E)rror, (f)ailed, and (X)passed tests
# `--tb=native`: use standard Python traceback format for debugging
# `-p no:warnings`: disable warnings plugin to keep test output clean
# `--assert=plain`: disable assertion rewriting to avoid import-order conflicts (see upstream PR #117060)
# `--max-worker-restart=0`: fail immediately on worker crash instead of restarting
addopts = "--verbose -rEfX --tb=native -p no:warnings --assert=plain --max-worker-restart=0"
testpaths = ["test"]
xfail_strict = true
markers = [
    "test_set_ci: [test set] marks tests to run in CI pipelines (select with `-m test_set_ci`)",
    "test_set_experimental: [test set] marks tests for experimental features (deselect with `-m \"not test_set_experimental\"`)",
    "test_set_perf: [test set] marks performance tests (select with `-m test_set_perf`)",
    "no_dynamo_reset: skips autouse TorchDynamo reset fixture",
    "single_worker: marks tests that must run on a single worker (select with `-m single_worker`)",
]
